# aleph-harness

./: .gitignore  pyproject.toml
defaults/: ALEPH.md
defaults/skills/collaboration/: SKILL.md
defaults/skills/research/: SKILL.md
defaults/skills/tool-authoring/: SKILL.md
defaults/skills/tool-authoring/references/: managed-tools.md
defaults/tools/: Bash.md  Edit.md  Plan.md  Read.md  WebFetch.md  WebSearch.md  Write.md
defaults/tools/lib/: budget.py  registry.py  runner.py
scratch/: channel-dashboard-design.md
scripts/: scaffold.py  smoke_test.py
src/aleph/: __init__.py  cli.py  config.py  harness.py  hooks.py  permissions.py  shell.py  tools.py
src/aleph/tui/: __init__.py  app.py  channels.py  messages.py
workbench/: BACKLOG.md  HANDOFF.md  design-subagents.md  todo.yaml
workbench/docs/: implementation.md  philosophy.md
