[project]
name = "aleph"
version = "0.1.0"
description = "Persistent self-improving agent harness for Claude Code"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.41",
    "textual>=3.0",
    "pyyaml>=6.0",
    "prompt-toolkit>=3.0.52",
]

[project.scripts]
aleph = "aleph.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aleph"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
